# cinetaste

./: .env.example  .env.production.example  .env.staging.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  render.staging.yaml  render.yaml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260710_0001_initial_schema.py  20260717_0002_titles_embedding_hnsw.py  20260717_0003_password_reset_tokens.py  20260717_0004_refresh_token_families.py  20260717_0005_recommendation_impressions.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/application/: auth_service.py  catalog_ingest.py  history_cursor.py  onboarding_service.py  recommendation_service.py  taste_service.py  taste_summary.py  watch_providers.py
backend/app/core/: config.py  cookies.py  logging.py  middleware.py  observability.py  security.py
backend/app/data/: __init__.py  onboarding_seed.py  (+1 more)
backend/tests/: conftest.py  test_auth_account.py  test_candidate_generation.py  test_config_production.py  test_cookies.py  test_embeddings_and_rank.py  test_eval.py  test_explanations.py  test_history_cursor.py  test_impressions.py  test_middleware_and_ready.py  test_observability.py  test_onboarding_complete.py  test_onboarding_seed.py  test_recommendation_pipeline.py  test_refresh_families.py  test_security.py  test_taste_signals.py  test_taste_summary.py  test_title_detail_schema.py  test_watch_providers.py
(+93 files in other folders)
